# workshop_01

./: .gitignore  LICENSE  README.md  excelauto-requirements.txt  pyproject.toml
excelauto/: db.py  helpers.py  main.py
excelauto/reports/: sales.xlsx
