[project]
name = "workshop_01"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Roby Winarto", email = "rob@thalent.dev"},
]
dependencies = ["pandas>=2.2.3", "sqlalchemy>=2.0.40", "psycopg2-binary>=2.9.10", "openpyxl==3.1.3", "xlsxwriter>=3.2.3"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
